--- a/index.html
+++ b/index.html
@@ -1518,18 +1518,18 @@ const Game = {
             diffPrompt = "谜题应当逻辑直观，线索在谜面中较为明显，不需要过于复杂的脑洞。";
             kpCount = "2-4";
         } else if (this.state.diff === 'normal') {
-            diffPrompt = "谜题应当具备标准的海龟汤难度，需要玩家进行一定的联想和侧向思维，存在1-2个思维陷阱。";
+            diffPrompt = "谜题应当具备标准的海龟汤难度，需要玩家进行一定的联想和侧向思维，可以适当设置思维陷阱。";
             kpCount = "4-6";
         } else {
             diffPrompt = "谜题应当极具挑战性，核心诡计非常隐晦，涉及复杂的因果链、心理盲区或冷门知识，需要极强的逻辑跳跃能力。";
-            kpCount = "6-10";
+            kpCount = "5-8";
         }
 
         const prompt = `你是一位侧向思维谜题大师。任务：根据标签[${this.state.tags}]创作一个逻辑严密的悬疑海龟汤。
         编写要求：
-            1. 谜题要基于物理或心理逻辑，适合通过问答和推理在有限轮次内解开。
+            1. 谜题要基于物理或心理逻辑，适合通过问答和推理在有限轮次内解开。谜面不应太复杂，以免信息过多影响判断。谜底的复杂程度视难度调整。
             2. 核心诡计应当在谜面中隐含线索，避免无厘头的谜底逻辑、过度依赖巧合或谜面与谜底脱节。
-            3. 谜面应构建一个不寻常、引人入胜的场景，激发用户的好奇心和探索真相的欲望；谜面应当引出对真相的提问。
+            3. 谜面应构建一个不寻常、引人入胜的场景，激发用户的好奇心和探索真相的欲望；谜面应当引出对真相的提问（以“发生了什么”或“为什么？”等结尾）
             4. 谜底应包含适当的反转或意外元素，但必须在逻辑上与整个谜题自洽且可被推理揭示。
             5. 难度设置：当前难度为“${this.state.diff}”。${diffPrompt}
         格式要求：
@@ -1949,3 +1949,4 @@ const Confetti = {
 </body>
 
 </html>
+
