--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
         /* 聊天区 */
         .chat-area { 
-            flex: 1; overflow-y: auto; padding: 10px 5px; margin: 10px 0;
+            flex: 1; overflow-y: auto; padding: 10px 10px; margin: 10px 0;
             flex-direction: column; gap: 20px; 
             mask-image: linear-gradient(to bottom, transparent, black 20px);
         }
@@ -478,6 +478,8 @@
             margin: 12px 0;
             text-align: center;
             animation: fadeInUp 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+            border-radius: 20px 20px 20px 3px;
+            width: 60%;
         }
 
         @keyframes fadeInUp {
@@ -493,15 +495,15 @@
 
         .settle-prompt h3 {
             margin: 0 0 8px 0;
-            font-size: 1.1rem;
+            font-size: 1.4rem;
             color: var(--primary);
             font-family: var(--font-serif);
         }
 
         .settle-prompt p {
             margin: 0 0 16px 0;
-            font-size: 0.9rem;
-            color: var(--text-muted);
+            font-size: 1rem;
+            color: white;
         }
 
         .settle-prompt-btns {
@@ -2486,22 +2488,23 @@ const Game = {
                     this.state.history.push({role:"assistant", content:html});
                     this.saveHistory('active');
 
-                    // 检查是否可以结算（得分 >= 80）
+                    // 通关条件：累计进度达到 100% 且本次满分 - 直接结算，不弹窗
+                    if(cumulativeFound >= total && score >= 100) {
+                        setTimeout(()=>this.finish(true), 1500);
+                        return; // 直接返回，不执行后续的结算提示逻辑
+                    }
+
+                    // 检查是否可以结算（得分 >= 80 但未满分）
                     if (score >= 80 && !this.state.canSettle) {
                         this.state.canSettle = true;
                         
-                        // 首次达到80分，1秒后显示结算提示
+                        // 首次达到80分（但未满分），1秒后显示结算提示
                         if (!this.state.settlePromptShown) {
                             setTimeout(() => this.showSettlePrompt(), 1000);
                         } else {
                             // 之后只更新按钮状态
                             this.updateSettleButton();
                         }
-                    }
-
-                    // 通关条件：累计进度达到 100% 且本次满分
-                    if(cumulativeFound >= total && score >= 100) {
-                        setTimeout(()=>this.finish(true), 1500);
                     }
 
                 } catch(e) { 
